# app/src/api/openapi.json
@@ -398,6 +398,15 @@
         ]
       }
     },
+    "/api/v1/business/{business_id}/creators": {
+      "get": {
+        "operationId": "read_directory_api_v1_business__business_id__creators_get",
+        "responses": [
+          "200",
+          "422"
+        ]
+      }
+    },
     "/api/v1/business/{business_id}/link-clicks": {
       "get": {
         "operationId": "read_business_audience_api_v1_business__business_id__link_clicks_get",
